codepkg/objects/Question_Answer_Rating__mdt.object
<CustomObject>
    <fields>
        <fullName>Override_Label__c</fullName>
        <label>Override Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Question__mdt</referenceTo>
        <relationshipLabel>Question Answers &amp; Ratings</relationshipLabel>
        <relationshipName>Question_Answers_Ratings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Rating_Score__c</fullName>
        <label>Rating Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Question Answer &amp; Rating</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Question__c</columns>
        <columns>MasterLabel</columns>
        <columns>Rating_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Question Answers &amp; Ratings</pluralLabel>
</CustomObject>